--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,13 +5,13 @@
 			<nav>
 				<ul>
 					<% unless podcast_signed_in? %>
-						<li><a href="#">Explore</a></li>
-						<li><%= link_to "Sign In", new_podcast_session_path %></li>
-						<li><%= link_to "Create a Podcast", new_podcast_registration_path %></li>
+						<li><%= link_to "Explorar", podcasts_path %></li>
+						<li><%= link_to "Entrar", new_podcast_session_path %></li>
+						<li><%= link_to "Criar um podcast", new_podcast_registration_path %></li>
 					<% else %>
 						<li><a href="#">Dashboard</a></li>
-						<li><a href="#">Explore</a></li>
-						<li><%= link_to "Sign Out", destroy_podcast_session_path, method: :delete %></li>
+						<li><%= link_to "Explorar", podcasts_path %></li>
+						<li><%= link_to "Sair", destroy_podcast_session_path, method: :delete %></li>
 					<% end %>
 				</ul>
 			</nav>
@@ -19,7 +19,7 @@
 	</header>
 	<div class="wrapper_skinny">
 		<h1>Encontre seus podcasts favoritos, ou crie o seu próprio.</h1>
-		<%= link_to "Create a Podcast", new_podcast_registration_path, class: "button button_highlight" %>
-		<a href="#" class="button button_white">Explore</a>
+		<%= link_to "Criar um podcast", new_podcast_registration_path, class: "button button_highlight" %>
+		<%= link_to "Explorar", podcasts_path, class: "button button_white" %>
 	</div>
 </div>
