--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -8,10 +8,11 @@
   <div id="links">
     <div class="wrapper_skinny">
       <ul>
-        <li>Episodes</li>
-        <li><a href="#">New Episode</a></li>
+        <li><%= link_to "Episodes", root_path %></li>
+        <li><%= link_to "Novo podcast", new_podcast_episode_path(@podcast) %></li>
         <li><%= link_to "Account Settings", edit_podcast_registration_path, class: "current" %></li>
-        <li><a href="#">View Podcast</a></li>
+        <li><%= link_to "View podcast", podcast_path(current_podcast) %></li>
+        
       </ul>
     </div>
   </div>
