--- a/app/views/episodes/edit.html.erb
+++ b/app/views/episodes/edit.html.erb
@@ -9,7 +9,7 @@
     <div class="wrapper_skinny">
       <ul>
         <li><%= link_to "Episodes", root_path %></li>
-        <li><%= link_to "Novo podcast", new_podcast_episode_path(@podcast), class: "current" %></li>
+        <li><%= link_to "Novo podcast", new_podcast_episode_path(@podcast) %></li>
         <li><%= link_to "Account Settings", edit_podcast_registration_path %></li>
         <li><%= link_to "View podcast", podcast_path(current_podcast) %></li>
       </ul>
