--- a/app/views/episodes/_form.html.erb
+++ b/app/views/episodes/_form.html.erb
@@ -1,13 +1,18 @@
 <%= form_for ([@podcast, @episode]) do |f| %>
-	<%= f.label :title %> <br>
-	<%= f.text_field :title %>
+	<div class="field">
+		<%= f.label :title %> <br>
+		<%= f.text_field :title %>
+	</div>
 
-	<br><br>
+	<div class="field">
+		<%= f.label :description %>
+		<%= f.text_area :description %>	
+	</div>
 
-	<%= f.label :description %> <br>
-	<%= f.text_area :description %>	
-
-	<br><br>
+	<div class="field">
+		<%= f.label :episode_thumbnail %>
+		<%= f.file_field :episode_thumbnail %>	
+	</div>
 
 	<%= f.submit %>
 <% end %>
