--- a/app/views/podcasts/show.html.erb
+++ b/app/views/podcasts/show.html.erb
@@ -30,7 +30,7 @@
 					<li class="cf">
 						<div class="episode_thumbnail">
 							<a href="#">
-								<img src="images/filipe.jpg" alt="Filipe">
+								<%= image_tag episode.episode_thumbnail.url(:medium) %>
 							</a>
 						</div>
 						<div class="episode_overview">
